# neobrood

./: .editorconfig  .gitattributes  .gitignore  .tokeignore  Cargo.toml  README.md
.cargo/: config.toml
.github/actions/install-linux-deps/: action.yml
.github/actions/install-mac-deps/: action.yml
.github/workflows/: ci.yml
assets/: (2)Blue_Storm_1.3.scx  (4)Revolver_SE_2.0.scx  (8)Big Game Hunters.scm  1-tile.scx  corner-starts.scm  lt.scm  stacked-buildings.scm  stacked-units.scm  unit-demo.scx
assets/fonts/: Inter-License.txt  JetBrainsMono-License.txt  SofiaSans-License.txt
gen_rules/: Cargo.toml
gen_rules/src/: iscript.rs  main.rs
imhex/: lo.hexpat  lo.pat  units_dat.hexproj
src/: asset_packs.rs  bytes.rs  camera.rs  constructs.rs  ecs.rs  fonts.rs  gameplay.rs  lib.rs  main.rs  main_menu.rs  players.rs  races.rs  random.rs  selection.rs  settings.rs  states.rs  units.rs
src/gamedata/: anim.rs  construct.rs  dat.rs  flingy.rs  generated.rs  image.rs  iscript.rs  lo.rs  mod.rs  rel.rs  sound.rs  sprite.rs  tbl.rs
src/gameplay/: build_time.rs  constructs.rs  create_construct.rs  facing_direction.rs  gizmos.rs  health.rs  in_game_menu.rs  iscripts.rs  mod.rs  players.rs  resources.rs  selection.rs  shield.rs  sounds.rs  status.rs
src/maps/: asset.rs  dat.rs  game_map.rs  mod.rs  position.rs  sprites.rs  tbl.rs  tileset.rs
src/math/: bounds.rs  mod.rs
src/render/: mod.rs  ysort.rs
