[package]
name = "neobrood"
version = "0.1.0"
edition = "2021"
default-run = "game"

[workspace]
members = ["gen_rules"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/main.rs"

[features]
default = ["framepacing", "inspector"]
framepacing = ["dep:bevy_framepace"]
inspector = ["dep:bevy-inspector-egui"]

[dependencies]
anyhow = "1.0"
bitflags = "2.4"
bevy_ecs_tilemap = { version = "0.14" }
bevy_framepace = { version = "0.17", optional = true }
bevy-inspector-egui = { version = "0.25", optional = true }
byteorder = "1.5"
directories = "5.0"
fixed = "1.27"
image = "0.25"
memchr = "2.7"
mimalloc = { version = "0.1", optional = true, default-features = false }
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.6"
thiserror = "1.0"

[dependencies.bevy]
version = "0.14"
features = ["dds", "wav"]

[dependencies.broodmap]
git = "https://github.com/ShieldBattery/broodmap.git"
rev = "0ff13013e11720b0e934d43ed6660fc3be2fcb88"

[dev-dependencies]
claims = "0.7"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
